[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceanalysis"
version = "0.1.0"
description = "Local forensic-style acoustic comparison pipeline for two WAV recordings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "librosa>=0.10",
  "soundfile>=0.12",
  "praat-parselmouth>=0.4.3",
  "torch>=2.1",
  "torchaudio>=2.1",
  "speechbrain>=0.5.16",
  "reportlab>=4.0",
]

[project.optional-dependencies]
pyannote = ["pyannote.audio>=3.1"]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
voiceanalysis = "voiceanalysis.cli:main"
voiceanalysis-gui = "voiceanalysis.gui:main"

[tool.setuptools.packages.find]
include = ["voiceanalysis*"]

[tool.ruff]
line-length = 100
target-version = "py311"
